--- a/vue-mobile/public/index.html
+++ b/vue-mobile/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=d4332e5adb8b584442266763d20b978c"></script>
+    <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=ZPEBZ-5XI6I-EWPGT-5XMZS-CRE43-M3FYY"></script>
     <title>web-demo</title>
   </head>
   <body>
