--- a/vue-mobile/public/index.html
+++ b/vue-mobile/public/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=d4332e5adb8b584442266763d20b978c"></script>
+    <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=d4332e5adb8b584442266763d20b978c"></script> -->
+    
+    <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=0ed6c79f9e20f7e8cb6888272cd74b8e"></script> -->
+    <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=040af8fc7837bcb1caf18bf4f3d478c9"></script> -->
+ <script type="text/javascript" src="https://3gimg.qq.com/lightmap/components/geolocation/geolocation.min.js"></script>
+    
     <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=ZPEBZ-5XI6I-EWPGT-5XMZS-CRE43-M3FYY"></script>
     <title>web-demo</title>
   </head>
