--- a/vue-mobile/public/index.html
+++ b/vue-mobile/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>new-logo.ico">
     <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=d4332e5adb8b584442266763d20b978c"></script>
     
     <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=0ed6c79f9e20f7e8cb6888272cd74b8e"></script> -->
