repair some bug

--- a/vue-mobile/public/index.html
+++ b/vue-mobile/public/index.html
@@ -13,7 +13,7 @@
  <!-- <script type="text/javascript" src="https://3gimg.qq.com/lightmap/components/geolocation/geolocation.min.js"></script> -->
     
     <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=ZPEBZ-5XI6I-EWPGT-5XMZS-CRE43-M3FYY"></script>
-    <title>web-demo</title>
+    <title>mobile</title>
   </head>
   <body>
     <noscript>
